crates/sniff-test/tests/snapshots/fixtures__documented_macro_contracts.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "kind": "documented-panic",
    "level": "deny",
    "owner": {
      "crate": "macro_contracts",
      "package-name": "macro-contracts",
      "package-version": "0.1.0",
      "scope": "workspace"
    },
    "reason": "call to `macro_contracts::documented_literal` with a `# Panics` contract has no recorded `// PANIC:` evidence",
    "root": "macro_contracts::async_literal_macro",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:69:1: 69:41",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:70:5: 70:26",
    "target": "macro_contracts::documented_literal",
    "trace": [
      "src/lib.rs:69:42: 71:2: macro_contracts::async_literal_macro --coroutine-body-> macro_contracts::async_literal_macro::{closure#0}",
      "src/lib.rs:70:5: 70:26: macro_contracts::async_literal_macro::{closure#0} --macro-expansion-> macro_contracts::documented_literal"
    ]
  },
  {
    "kind": "documented-panic",
    "level": "deny",
    "owner": {
      "crate": "macro_contracts",
      "package-name": "macro-contracts",
      "package-version": "0.1.0",
      "scope": "workspace"
    },
    "reason": "call to `macro_contracts::documented_call` with a `# Panics` contract has no recorded `// PANIC:` evidence",
    "root": "macro_contracts::custom_macro",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:34:1: 34:22",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:35:5: 35:23",
    "target": "macro_contracts::documented_call",
    "trace": [
      "src/lib.rs:35:5: 35:23: macro_contracts::custom_macro --macro-expansion-> macro_contracts::documented_call"
    ]
  },
  {
    "kind": "documented-panic",
    "level": "deny",
    "owner": {
      "crate": "macro_contracts",
      "package-name": "macro-contracts",
      "package-version": "0.1.0",
      "scope": "workspace"
    },
    "reason": "call to `std::macros::println` with a `# Panics` contract has no recorded `// PANIC:` evidence",
    "root": "macro_contracts::empty_println",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:10:1: 10:23",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:11:5: 11:15",
    "target": "std::macros::println",
    "trace": [
      "src/lib.rs:11:5: 11:15: macro_contracts::empty_println --macro-expansion-> std::macros::println"
    ]
  },
  {
    "kind": "documented-panic",
    "level": "deny",
    "owner": {
      "crate": "macro_contracts",
      "package-name": "macro-contracts",
      "package-version": "0.1.0",
      "scope": "workspace"
    },
    "reason": "call to `macro_contracts::documented_literal` with a `# Panics` contract has no recorded `// PANIC:` evidence",
    "root": "macro_contracts::literal_macro",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:65:1: 65:29",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:66:5: 66:26",
    "target": "macro_contracts::documented_literal",
    "trace": [
      "src/lib.rs:66:5: 66:26: macro_contracts::literal_macro --macro-expansion-> macro_contracts::documented_literal"
    ]
  },
  {
    "kind": "documented-panic",
    "level": "deny",
    "owner": {
      "crate": "macro_contracts",
      "package-name": "macro-contracts",
      "package-version": "0.1.0",
      "scope": "workspace"
    },
    "reason": "call to `macro_contracts::documented_call` with a `# Panics` contract has no recorded `// PANIC:` evidence",
    "root": "macro_contracts::nested_macro",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:47:1: 47:22",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:30:9: 30:27",
    "target": "macro_contracts::documented_call",
    "trace": [
      "src/lib.rs:48:5: 48:19: macro_contracts::nested_macro --macro-expansion-> macro macro_contracts::nested_call",
      "src/lib.rs:30:9: 30:27: macro macro_contracts::nested_call --macro-expansion-> macro_contracts::documented_call"
    ]
  },
  {
    "kind": "documented-panic",
    "level": "deny",
    "owner": {
      "crate": "macro_contracts",
      "package-name": "macro-contracts",
      "package-version": "0.1.0",
      "scope": "workspace"
    },
    "reason": "call to `std::macros::println` with a `# Panics` contract has no recorded `// PANIC:` evidence",
    "root": "macro_contracts::plain_println",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:1:1: 1:23",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:2:5: 2:22",
    "target": "std::macros::println",
    "trace": [
      "src/lib.rs:2:5: 2:22: macro_contracts::plain_println --macro-expansion-> std::macros::println"
    ]
  },
  {
    "kind": "documented-panic",
    "level": "deny",
    "owner": {
      "crate": "macro_contracts",
      "package-name": "macro-contracts",
      "package-version": "0.1.0",
      "scope": "workspace"
    },
    "reason": "call to `macro_contracts::documented_call` with a `# Panics` contract has no recorded `// PANIC:` evidence",
    "root": "macro_contracts::repeated_macro_sites",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:51:1: 51:30",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:52:5: 52:23",
    "target": "macro_contracts::documented_call",
    "trace": [
      "src/lib.rs:52:5: 52:23: macro_contracts::repeated_macro_sites --macro-expansion-> macro_contracts::documented_call"
    ]
  },
  {
    "kind": "documented-panic",
    "level": "deny",
    "owner": {
      "crate": "macro_contracts",
      "package-name": "macro-contracts",
      "package-version": "0.1.0",
      "scope": "workspace"
    },
    "reason": "call to `macro_contracts::documented_call` with a `# Panics` contract has no recorded `// PANIC:` evidence",
    "root": "macro_contracts::repeated_macro_sites",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:51:1: 51:30",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:53:5: 53:23",
    "target": "macro_contracts::documented_call",
    "trace": [
      "src/lib.rs:53:5: 53:23: macro_contracts::repeated_macro_sites --macro-expansion-> macro_contracts::documented_call"
    ]
  },
  {
    "function": "macro_contracts::safety_macro",
    "kind": "safety-obligation-missing-justification",
    "level": "deny",
    "owner": {
      "crate": "macro_contracts",
      "package-name": "macro-contracts",
      "package-version": "0.1.0",
      "scope": "workspace"
    },
    "reason": "call to `macro_contracts::safety_literal` with a `# Safety` contract has no recorded `// SAFETY:` evidence",
    "root": "macro_contracts::safety_macro",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:82:1: 82:28",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:83:5: 83:22",
    "target": "macro_contracts::safety_literal",
    "trace": [
      "src/lib.rs:83:5: 83:22: macro_contracts::safety_macro --macro-expansion-> macro_contracts::safety_literal"
    ]
  }
]
