crates/sniff-test/tests/snapshots/fixtures__documented_obligation.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "documented_obligation"
    },
    "dependencies": [],
    "findings": [
      {
        "kind": "documented-panic",
        "level": "warn",
        "reason": "documented_obligation::documented_contract documents when it may panic under # Panics",
        "root": "documented_obligation::reaches_documented_contract",
        "root-kind": "concrete",
        "span": "src/lib.rs:8:5: 8:30",
        "target": "documented_obligation::documented_contract",
        "trace": [
          "src/lib.rs:8:5: 8:30: documented_obligation::reaches_documented_contract --direct-call-> documented_obligation::documented_contract"
        ]
      },
      {
        "kind": "panic-invocation",
        "level": "deny",
        "reason": "panic sink core::std::rt::panic_fmt",
        "root": "documented_obligation::undocumented_bug",
        "root-kind": "concrete",
        "span": "src/lib.rs:12:5: 12:29",
        "target": "core::std::rt::panic_fmt",
        "trace": [
          "src/lib.rs:12:5: 12:29: documented_obligation::undocumented_bug --macro-expansion-> macro std::panic",
          "src/lib.rs:12:5: 12:29: macro std::panic --macro-expansion-> macro core::std::panic::panic_2021",
          "[SYSROOT]/lib/rustlib/src/rust/library/core/src/panic.rs:62:9: 62:73: macro core::std::panic::panic_2021 --direct-call-> core::std::rt::panic_fmt"
        ]
      }
    ],
    "format-version": 7,
    "reason": "sniff-test-artifact",
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
