crates/sniff-test/tests/snapshots/fixtures__driver_ambiguous_markers.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "ambiguous_markers"
    },
    "dependencies": [],
    "findings": [],
    "format-version": 7,
    "reason": "sniff-test-artifact",
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
