crates/sniff-test/tests/snapshots/fixtures__driver_ambiguous_markers_strict.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "ambiguous_markers"
    },
    "dependencies": [],
    "findings": [
      {
        "effect": "panic",
        "kind": "ambiguous-effect-requirement",
        "level": "deny",
        "reason": "`ambiguous_markers::duplicate_name_ratio` has 2 # Panics requirements named `nonzero`",
        "root": "ambiguous_markers::duplicate_name_marker",
        "root-kind": "concrete",
        "span": "[FIXTURE]/src/lib.rs:21:1: 21:45",
        "target": "ambiguous_markers::duplicate_name_ratio"
      },
      {
        "effect": "panic",
        "kind": "ambiguous-effect-marker",
        "level": "deny",
        "reason": "one `// PANIC:` marker applies to 2 panic obligation sites",
        "root": "ambiguous_markers::shared_block_marker",
        "root-kind": "concrete",
        "span": "[FIXTURE]/src/lib.rs:9:1: 10:1",
        "trace": [
          "[FIXTURE]/src/lib.rs:11:21: 11:42: ambiguous_markers::shared_block_marker --direct-call-> ambiguous_markers::ratio",
          "[FIXTURE]/src/lib.rs:12:22: 12:43: ambiguous_markers::shared_block_marker --direct-call-> ambiguous_markers::ratio"
        ]
      }
    ],
    "format-version": 6,
    "reason": "sniff-test-artifact",
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
