crates/sniff-test/tests/snapshots/fixtures__driver_ambiguous_safety_strict.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "ambiguous_safety"
    },
    "dependencies": [],
    "findings": [
      {
        "function": "ambiguous_safety::read_duplicate",
        "kind": "ambiguous-safety-requirement",
        "level": "deny",
        "reason": "`ambiguous_safety::read_duplicate` has multiple # Safety requirements named `valid ptr`",
        "requirements": [
          "valid_ptr: pointer must be non-null.",
          "valid_ptr: pointer must reference initialized memory."
        ],
        "root": "ambiguous_safety::duplicate_safety_marker",
        "root-kind": "concrete",
        "span": "[FIXTURE]/src/lib.rs:7:1: 7:43"
      },
      {
        "function": "ambiguous_safety::read_duplicate",
        "kind": "ambiguous-safety-requirement",
        "level": "deny",
        "reason": "`ambiguous_safety::read_duplicate` has multiple # Safety requirements named `valid ptr`",
        "requirements": [
          "valid_ptr: pointer must be non-null.",
          "valid_ptr: pointer must reference initialized memory."
        ],
        "root": "ambiguous_safety::read_duplicate",
        "root-kind": "concrete",
        "span": "[FIXTURE]/src/lib.rs:7:1: 7:43"
      },
      {
        "function": "ambiguous_safety::reused_caller_marker_for_macro_expansion",
        "kind": "ambiguous-safety-marker",
        "level": "deny",
        "reason": "one `// SAFETY:` marker applies to 2 safety effect groups",
        "root": "ambiguous_safety::reused_caller_marker_for_macro_expansion",
        "root-kind": "concrete",
        "span": "[FIXTURE]/src/lib.rs:91:1: 92:1"
      },
      {
        "function": "ambiguous_safety::reused_marker_within_one_macro_expansion",
        "kind": "ambiguous-safety-marker",
        "level": "deny",
        "reason": "one `// SAFETY:` marker applies to 2 safety effect groups",
        "root": "ambiguous_safety::reused_marker_within_one_macro_expansion",
        "root-kind": "concrete",
        "span": "[FIXTURE]/src/lib.rs:68:1: 69:1"
      }
    ],
    "format-version": 10,
    "reason": "sniff-test-artifact",
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
