crates/sniff-test/tests/snapshots/fixtures__driver_async_runtime_bodies.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "async_runtime_bodies"
    },
    "dependencies": [],
    "findings": [
      {
        "kind": "panic-invocation",
        "level": "deny",
        "reason": "panic sink core::std::rt::panic_fmt",
        "root": "async_runtime_bodies::async_root",
        "root-kind": "concrete",
        "span": "[FIXTURE]/src/lib.rs:2:5: 2:46",
        "target": "core::std::rt::panic_fmt",
        "trace": [
          "[FIXTURE]/src/lib.rs:1:27: 3:2: async_runtime_bodies::async_root --coroutine-body-> async_runtime_bodies::async_root::{closure#0}",
          "[FIXTURE]/src/lib.rs:2:5: 2:46: async_runtime_bodies::async_root::{closure#0} --macro-expansion-> macro std::panic",
          "[FIXTURE]/src/lib.rs:2:5: 2:46: macro std::panic --macro-expansion-> macro core::std::panic::panic_2021",
          "[SYSROOT]/lib/rustlib/src/rust/library/core/src/panic.rs:62:9: 62:73: macro core::std::panic::panic_2021 --direct-call-> core::std::rt::panic_fmt"
        ]
      },
      {
        "kind": "panic-invocation",
        "level": "deny",
        "reason": "panic sink core::std::rt::panic_fmt",
        "root": "async_runtime_bodies::generic_async_root",
        "root-kind": "generic",
        "span": "[FIXTURE]/src/lib.rs:6:5: 6:52",
        "target": "core::std::rt::panic_fmt",
        "trace": [
          "[FIXTURE]/src/lib.rs:5:47: 7:2: async_runtime_bodies::generic_async_root --coroutine-body-> async_runtime_bodies::generic_async_root::{closure#0}",
          "[FIXTURE]/src/lib.rs:6:5: 6:52: async_runtime_bodies::generic_async_root::{closure#0} --macro-expansion-> macro std::panic",
          "[FIXTURE]/src/lib.rs:6:5: 6:52: macro std::panic --macro-expansion-> macro core::std::panic::panic_2021",
          "[SYSROOT]/lib/rustlib/src/rust/library/core/src/panic.rs:62:9: 62:73: macro core::std::panic::panic_2021 --direct-call-> core::std::rt::panic_fmt"
        ]
      },
      {
        "kind": "panic-invocation",
        "level": "deny",
        "reason": "panic sink core::std::rt::panic_fmt",
        "root": "async_runtime_bodies::nested_async_runtime_bodies",
        "root-kind": "concrete",
        "span": "[FIXTURE]/src/lib.rs:11:9: 11:50",
        "target": "core::std::rt::panic_fmt",
        "trace": [
          "[FIXTURE]/src/lib.rs:9:44: 21:2: async_runtime_bodies::nested_async_runtime_bodies --coroutine-body-> async_runtime_bodies::nested_async_runtime_bodies::{closure#0}",
          "[FIXTURE]/src/lib.rs:10:5: 12:6: async_runtime_bodies::nested_async_runtime_bodies::{closure#0} --coroutine-body-> async_runtime_bodies::nested_async_runtime_bodies::{closure#0}::{closure#0}",
          "[FIXTURE]/src/lib.rs:11:9: 11:50: async_runtime_bodies::nested_async_runtime_bodies::{closure#0}::{closure#0} --macro-expansion-> macro std::panic",
          "[FIXTURE]/src/lib.rs:11:9: 11:50: macro std::panic --macro-expansion-> macro core::std::panic::panic_2021",
          "[SYSROOT]/lib/rustlib/src/rust/library/core/src/panic.rs:62:9: 62:73: macro core::std::panic::panic_2021 --direct-call-> core::std::rt::panic_fmt"
        ]
      },
      {
        "kind": "panic-invocation",
        "level": "deny",
        "reason": "panic sink core::std::rt::panic_fmt",
        "root": "async_runtime_bodies::nested_async_runtime_bodies",
        "root-kind": "concrete",
        "span": "[FIXTURE]/src/lib.rs:18:9: 18:52",
        "target": "core::std::rt::panic_fmt",
        "trace": [
          "[FIXTURE]/src/lib.rs:9:44: 21:2: async_runtime_bodies::nested_async_runtime_bodies --coroutine-body-> async_runtime_bodies::nested_async_runtime_bodies::{closure#0}",
          "[FIXTURE]/src/lib.rs:20:15: 20:20: async_runtime_bodies::nested_async_runtime_bodies::{closure#0} --direct-call-> async_runtime_bodies::nested_async_runtime_bodies::{closure#0}::{closure#1}::{closure#0}",
          "[FIXTURE]/src/lib.rs:18:9: 18:52: async_runtime_bodies::nested_async_runtime_bodies::{closure#0}::{closure#1}::{closure#0} --macro-expansion-> macro std::panic",
          "[FIXTURE]/src/lib.rs:18:9: 18:52: macro std::panic --macro-expansion-> macro core::std::panic::panic_2021",
          "[SYSROOT]/lib/rustlib/src/rust/library/core/src/panic.rs:62:9: 62:73: macro core::std::panic::panic_2021 --direct-call-> core::std::rt::panic_fmt"
        ]
      }
    ],
    "format-version": 11,
    "reason": "sniff-test-artifact",
    "rustc-version": "[RUSTC_VERSION]",
    "tool-version": "0.1.0"
  }
]
