crates/sniff-test/tests/snapshots/fixtures__driver_chain_markers.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "chain_markers"
    },
    "dependencies": [],
    "findings": [
      {
        "kind": "documented-panic",
        "level": "warn",
        "reason": "chain_markers::Widget::risky documents when it may panic under # Panics",
        "root": "chain_markers::blanket_marker_above_chain",
        "root-kind": "concrete",
        "span": "[FIXTURE]/src/lib.rs:26:5: 28:17",
        "target": "chain_markers::Widget::risky",
        "trace": [
          "[FIXTURE]/src/lib.rs:26:5: 28:17: chain_markers::blanket_marker_above_chain --direct-call-> chain_markers::Widget::risky"
        ]
      }
    ],
    "format-version": 10,
    "reason": "sniff-test-artifact",
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
