crates/sniff-test/tests/snapshots/fixtures__driver_contract_overrides.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "analysis-findings": [],
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "contract_overrides",
      "crate-types": [
        "lib"
      ],
      "extra-filename": "[EXTRA_FILENAME]",
      "manifest-path": null,
      "metadata": "[METADATA]",
      "package-name": null,
      "package-version": null,
      "target": null
    },
    "concrete-roots": 1,
    "dependencies": [],
    "dependency-cache": {
      "failed": 0,
      "hits": 0,
      "total": 0
    },
    "format-version": 3,
    "generic-roots": 0,
    "reason": "sniff-test-artifact",
    "roots": [
      {
        "findings": [
          {
            "edge": "contract_overrides::panic_override_missing_marker --direct-call-> contract_overrides::panic_contract",
            "kind": "documented-panic",
            "level": "warn",
            "reason": "contract_overrides::panic_contract documents when it may panic under # Panics",
            "span": "[FIXTURE]/src/lib.rs:8:5: 8:25",
            "target": "contract_overrides::panic_contract",
            "trace": [
              "[FIXTURE]/src/lib.rs:8:5: 8:25: contract_overrides::panic_override_missing_marker --direct-call-> contract_overrides::panic_contract"
            ]
          }
        ],
        "has-panic-docs": false,
        "root": "contract_overrides::panic_override_missing_marker",
        "root-declaration": "[FIXTURE]/src/lib.rs:7:1",
        "root-kind": "concrete"
      }
    ],
    "rustc-version": "[RUSTC_VERSION]",
    "safety": {
      "findings": [
        {
          "function": "contract_overrides::safety_override_missing_requirement",
          "kind": "unsafe-call-missing-requirements",
          "level": "warn",
          "missing-requirements": [
            "initialized: pointer must reference initialized memory."
          ],
          "reason": "unsafe call to `contract_overrides::synthetic_read` does not satisfy all # Safety requirements",
          "span": "[FIXTURE]/src/lib.rs:30:14: 30:42",
          "target": "contract_overrides::synthetic_read"
        }
      ]
    },
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
